@@ -3,7 +3,6 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.domains.DataProduct;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -24,7 +23,7 @@ public record DataProductIndex(DataProduct dataProduct) implements SearchIndex {
         "fqnParts",
         getFQNParts(
             dataProduct.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("entityType", Entity.DATA_PRODUCT);
     doc.put("owner", getEntityWithDisplayName(dataProduct.getOwner()));
     doc.put("domain", getEntityWithDisplayName(dataProduct.getDomain()));
