@@ -3,7 +3,6 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.ParseTags;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -27,7 +26,7 @@ public record SearchEntityIndex(org.openmetadata.schema.entity.data.SearchIndex 
         "fqnParts",
         getFQNParts(
             searchIndex.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     ParseTags parseTags = new ParseTags(Entity.getEntityTags(Entity.SEARCH_INDEX, searchIndex));
     doc.put("tags", parseTags.getTags());
     doc.put("tier", parseTags.getTierTag());
@@ -40,10 +39,11 @@ public record SearchEntityIndex(org.openmetadata.schema.entity.data.SearchIndex 
 
   public static Map<String, Float> getFields() {
     Map<String, Float> fields = SearchIndex.getDefaultFields();
-    fields.put("fields.name", 2.0f);
-    fields.put("fields.name.keyword", 2.0f);
+    fields.put("fields.name", 7.0f);
+    fields.put("fields.name.keyword", 50f);
     fields.put("fields.children.description", 1.0f);
-    fields.put("fields.children.name", 2.0f);
+    fields.put("fields.children.name", 7.0f);
+    fields.put("fields.children.name.keyword", 5.0f);
     return fields;
   }
 }
